--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <a href="https://www.youtube.com/channel/UCLXJBREmJfybQt9dxkoVhkg?view_as=subscriber" class="btn btn-sm fa fa-youtube-play"></a>
           <a href="https://github.com/derf974" class="btn btn-sm fa fa-github"></a>
           <a href="https://derf-z-itnux.blogspot.com/" class="btn btn-sm fa fa-globe"></a>
-          <a href='https://discord.gg/F7dbp89' class="https://cdn.discordapp.com/attachments/728139160648679515/773521435037270056/20201104_081602.png"></a>
-      </p>
+          <a href="https://discord.gg/F7dbp89" class="btn btn-sm fa fa-"></a>
+
       </main>
 
     </div>
