--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
          welcolme !
     </h1>
     <h6>bonjour vous êtes sur le site de sly_off pas encore fini</h6>
+   <img src="..." class="img-fluid" alt="Responsive image">
     <span role="button" tabindex="0">Non-button element button</span>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Bootstrap core CSS -->
