--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <h1>
          welcolme !
     </h1>
+   
     <h6>bonjour vous êtes sur le site de sly_off pas encore fini</h6>
-   <img src="..." class="img-fluid" alt="Responsive image">
+   <img src="..." class="img-fluid" alt="https://cdn.discordapp.com/attachments/728139160648679515/773521435037270056/20201104_081602.png">
     <span role="button" tabindex="0">Non-button element button</span>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Bootstrap core CSS -->
