--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <p>
      test
      </p>
+    <style>
     body {
     background-color: yellow;
     }
+   </style>
   </head>
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
