--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>
      test
      </p>
+    <h1 class="text-hide" style="background-image: url('...');">Bootstrap</h1>
     <style>
     body {
     background-color: yellow;
