--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="text-hide" style="background-image: url('...');">Bootstrap</h1>
     <style>
     body {
-    background-color: yellow;
+    background-color: black;
     }
    </style>
   </head>
