--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     </h1>
  
     <p>
-     test
+     bonjour et bienvenue sur le panel de sly_off le site que vous avez défini est pas terminée 
      </p>
-    <h1 class="text-hide" style="background-image: url('...');">Bootstrap</h1>
+    
     <style>
     body {
-    background-color: black;
+    background-color: bleue;
     }
    </style>
   </head>
