--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     background-color: yellow;
     }
    </style>
+    
+    <img src="https://cdn.discordapp.com/attachments/728139160648679515/773521435037270056/20201104_081602.png" />
   </head>
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
