--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
    </style>
     
     <img src="https://cdn.discordapp.com/attachments/728139160648679515/773521435037270056/20201104_081602.png" />
-  <p>
-   clique ici
-    </p>
+  <bouton>clique ici</bouton>
     
   </head>
   <body class="text-center">
