--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <img src="https://cdn.discordapp.com/attachments/728139160648679515/773521435037270056/20201104_081602.png" />
   <bouton>clique ici</bouton>
     
+   <a id="contact" href="https://discord.gg/F7dbp89">Ajout-bot</a>
   </head>
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
