--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <h1>
          welcolme !
     </h1>
- 
+ header {
+   background-color: black;    
+ }
+    
+ <header>header</header>
     <p>
      bonjour et bienvenue sur le panel de sly_off le site que vous avez défini est pas terminée 
      </p>
