--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          welcolme !
     </h1>
  header {
-   background-color: black;    
+   background-color: #333333;    
  }
     
  <header>header</header>
