--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
  header {
    background-color: #333333;    
  }
-    
+    <div class="dropdown">
+  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown link
+  </a>
+
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+</div>
  <header>header</header>
     <p>
      bonjour et bienvenue sur le panel de sly_off le site que vous avez défini est pas terminée 
