--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
      </p>
  
     <img src="https://cdn.discordapp.com/attachments/728139160648679515/773521435037270056/20201104_081602.png" />
- 
+
+    <div class="card">
+  <div class="card-body">
+    This is some text within a card body.
+  </div>
+</div>
+    
     <bouton>clique ici</bouton>
     
    <a id="contact" href="https://discord.gg/F7dbp89">Ajout-bot</a>
