--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     This is some text within a card body.
   </div>
 </div>
+<div class="card">
+  <div class="card-header">
+    Featured
+  </div>
+  
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
     
     <bouton>clique ici</bouton>
     
