--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
  
     <img src="https://cdn.discordapp.com/attachments/728139160648679515/773521435037270056/20201104_081602.png" />
 
+    <div class="card mb-3" style="max-width: 540px;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="..." class="card-img" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+    
     <div class="card">
   <div class="card-body">
     This is some text within a card body.
