--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="card mb-3" style="max-width: 540px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="..." class="card-img" alt="...">
+      <img src="https://cdn.discordapp.com/attachments/773153887318048769/773584821624111104/custom-rio-cartoon-movie-classic-canvas-wallpapers.jpg" class="card-img" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
