--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     </div>
   </div>
 </div>
-    
+ <style>
+   body {
+     background-color: yellow;
+     }
     <bouton>clique ici</bouton>
     
    <a id="contact" href="https://discord.gg/F7dbp89">Ajout-bot</a>
