--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
      background-color: yellow;
      }
     <bouton>clique ici</bouton>
-    
+   
+    <img src="https://media.giphy.com/media/XhqE2NblnOvYSbGAXe/giphy.gif" alt="..." class="img-thumbnail">
+   
    <a id="contact" href="https://discord.gg/F7dbp89">Ajout-bot</a>
  
   <body class="text-center">
