--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      }
     <bouton>clique ici</bouton>
    
-    <img src="https://media.giphy.com/media/XhqE2NblnOvYSbGAXe/giphy.gif" alt="..." class="img-thumbnail">
+    <img src="https://media.giphy.com/media/XhqE2NblnOvYSbGAXe/giphy.gif" alt="..." class="rounded float-right">
    
    <a id="contact" href="https://discord.gg/F7dbp89">Ajout-bot</a>
  
