--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     </div>
   </div>
 </div>
+<button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+<button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button> 
  <style>
    body {
      background-color: yellow;
