--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </div>
 </div>
-<button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+<button type="button" class="https://discord.com/oauth2/authorize?client_id=764625811494928425&scope=bot&permissions=8">ajout-bot</button>
 <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button> 
  <style>
    body {
