--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#hero"><h1><span>S</span>haif <span>A</span>rfan</h1></a>
+          <a href="#hero"><h1><span>S</span>sly <span>A</span>_off</h1></a>
         </div>
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
@@ -37,7 +37,7 @@
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
         <h1>sly_off<span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
+        <a href="#projects" type="button" class="cta">Projet</a>
       </div>
     </div>
   </section>
