--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#hero"><h1><span>S</span>sly <span>A</span>_off</h1></a>
+          <a href="#hero"><h1><span>S</span>ly <span>_</span>off</h1></a>
         </div>
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
