--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="#projects" data-after="Projects">Projects</a></li>
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
+            <li><a href="#staff" data-after="Staff">Contact</a></li>
           </ul>
         </div>
       </div>
