--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#projects" data-after="Projects">Projects</a></li>
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
-            <li><a href="#staff" data-after="Staff">Contact</a></li>
+            <li><a href="#staff" data-after="Staff">Staff</a></li>
           </ul>
         </div>
       </div>
@@ -190,6 +190,18 @@
   </section>
   <!-- End Contact Section -->
 
+  <!-- Staff Section -->
+  <section id="contact">
+    </div>
+      <div class="staff-bottom">
+        <div class="staff-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
+          <h2>Web Design</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
+        </div>
+  </section>  
+  <!-- End Staff Section -->
+  
   <!-- Footer -->
   <section id="footer">
     <div class="footer container">
