--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   <!-- End Contact Section -->
 
   <!-- Staff Section -->
-  <section id="contact">
+  <section id="staff">
     </div>
       <div class="staff-bottom">
         <div class="staff-item">
