--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
 
   <!-- Staff Section -->
   <section id="staff">
+    <div class="staff container">
+      <div class="service-top">
+        <h1 class="section-title">Sta<span>f</span>f</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+      </div>
     </div>
       <div class="staff-bottom">
         <div class="staff-item">
