--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
 
