--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <h1>My Name is <span></span></h1>
         <h1>sly_off<span></span></h1>
         <a href="#projects" type="button" class="cta">Projet</a>
+       <a href="https://discord.com/oauth2/authorize?client_id=764625811494928425&scope=bot&permissions=8" type="button" class="cta">Add the bot</a>
+      
       </div>
     </div>
   </section>
