--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#projects" data-after="Projects">Projects</a></li>
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
-            <li><a href="https://discord.gg/F7dbp89" data-after="support">Staff</a></li>
+            <li><a href="https://discord.gg/F7dbp89" data-after="support">Support</a></li>
           </ul>
         </div>
       </div>
