--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
   <!-- Footer -->
   <section id="footer">
     <div class="footer container">
-      <div class="brand"><h1><span>S</span>haif <span>A</span>rfan</h1></div>
-      <h2>Your Complete Web Solution</h2>
+      <div class="brand"><h1><span>S</span>ly<span>_</span>off.com</h1></div>
+      <h2>se site a été créé par jordan_offshl</h2>
       <div class="social-icon">
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
