--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         </div>
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
-         <img src="./img-1.png" alt="img">
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
             <li><a href="#services" data-after="Service">Services</a></li>
@@ -193,7 +192,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png"/></a>
         </div>
       </div>
-      <p>Copyright © 2020 Arfan. All rights reserved</p>
+      <p>sly_off © 2020.</p>
     </div>
   </section>
   <!-- End Footer -->
