--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <!-- Hero Section  -->
   <section id="hero">
     <div class="hero container">
+   <img src="https://cdn.discordapp.com/attachments/728139160648679519/780041131001380916/giphy_2.gif" alt="img">
       <div>
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
