--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <li><a href="#contact" data-after="Contact">Contact</a></li>
             <li><a href="https://discord.gg/F7dbp89" data-after="support">Support</a></li>
           </ul>
+         <div class="hero-img">
+         <img src="./img-1.png" alt="">
         </div>
       </div>
     </div>
@@ -40,8 +42,7 @@
        <h1>My Name is <span></span></h1>
        <h1>sly_off<span></span></h1>
        <a href="#projects" type="button" class="cta">Projet</a>
-       <a href="https://discord.com/oauth2/authorize?client_id=764625811494928425&scope=bot&permissions=8" type="button" class="cta">Add the bot</a>
-      
+       <a href="https://discord.com/oauth2/authorize?client_id=764625811494928425&scope=bot&permissions=8" type="button" class="cta">Add the bot</a>      
       </div>
     </div>
   </section>
