--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+  <link rel="icon" href="https://cdn.discordapp.com/attachments/728139160648679519/780157817284722749/53f5485434a363d98d0b097abb13d8c9.png">
 <html lang="en"> 
 <head>
   <meta charset="UTF-8">
