--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="#services" data-after="Service">Services</a></li>
             <li><a href="#projects" data-after="Projects">Projects</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
+            <li><a href="#commands" data-after="Commands">Commands</a></li>
             <li><a href="https://discord.gg/F7dbp89" data-after="support">Support</a></li>
           </ul>         
         </div>
@@ -141,6 +142,25 @@
   </section>
   <!-- End Projects Section -->
 
+  <!-- Commands Section -->
+  <section id="commands">
+    <div class="commands container">
+      <div class="commands-header">
+        <h1 class="section-title">Recent <span>Commands</span></h1>
+      </div>
+      <div class="all-projects">
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Project 1</h1>
+            <h2>Coding is Love</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+          </div>
+          <div class="project-img">
+            <img src="./img-3.png" alt="img">
+          </div>
+        </div>
+      <!-- End Commands Section -->
+        
   <!-- Contact Section -->
   <section id="contact">
     <div class="contact container">
@@ -173,7 +193,7 @@
     </div>
   </section>
   <!-- End Contact Section -->
-  
+ 
   <!-- Footer -->
   <section id="footer">
     <div class="footer container">
