--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
       <div class="commands-header">
         <h1 class="section-title">Recent <span>Commands</span></h1>
       </div>
-      <div class="all-projects">
-        <div class="project-item">
-          <div class="project-info">
+      <div class="all-Commands">
+        <div class="commands-item">
+          <div class="Commands-info">
             <h1>Project 1</h1>
             <h2>Coding is Love</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
