--- a/index.html
+++ b/index.html
@@ -142,25 +142,76 @@
   </section>
   <!-- End Projects Section -->
 
-  <!-- Commands Section -->
-  <section id="commands">
-    <div class="commands container">
-      <div class="commands-header">
-        <h1 class="section-title">Recent <span>Commands</span></h1>
+  <section>
+    <div class="container">
+      <div class="header">
+        <h1 class="logo">PhotoGallery</h1>
+        <form>
+          <input type="text" placeholder="Search">
+          <ion-icon name="search-outline"></ion-icon>
+        </form>
       </div>
-      <div class="all-Commands">
-        <div class="commands-item">
-          <div class="Commands-info">
-            <h1>Project 1</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="commands-img">
-            <img src="./img-3.png" alt="img">
-          </div>
+      <div class="gallery">
+        <div class="item">
+          <a href="#">
+            <img src="https://images.pexels.com/photos/4816319/pexels-photo-4816319.jpeg" alt="image">
+            <h3>Photographer Name</h3>
+          </a>
         </div>
-      <!-- End Commands Section -->
-        
+        <div class="item">
+          <a href="#">
+            <img src="https://images.pexels.com/photos/2598024/pexels-photo-2598024.jpeg" alt="image">
+            <h3>Photographer Name</h3>
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="https://images.pexels.com/photos/1122409/pexels-photo-1122409.jpeg" alt="image">
+            <h3>Photographer Name</h3>
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="https://images.pexels.com/photos/3373303/pexels-photo-3373303.jpeg" alt="image">
+            <h3>Photographer Name</h3>
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="https://images.pexels.com/photos/4674175/pexels-photo-4674175.jpeg" alt="image">
+            <h3>Photographer Name</h3>
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="https://images.pexels.com/photos/4850291/pexels-photo-4850291.jpeg" alt="image">
+            <h3>Photographer Name</h3>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!-- *******************   -->
+<!--  This Code is for only the floating card in right bottom corner -->
+<!-- ********************  -->
+<div class="float-text">
+  <p>get in touch</p>
+</div>
+<div class="float-card-info">
+  <i class="gg-close-r"></i>
+  <p>coded by Web Cifar</p>
+  <div class="icons">
+    <a href="https://www.youtube.com/channel/UCdxaLo9ALJgXgOUDURRPGiQ" target="_blank"><i class="gg-youtube"></i></a>
+    <a href="https://facebook.com/webcifar" target="_blank"><i class="gg-facebook"></i></a>
+    <a href="https://instagram.com/web_cifar" target="_blank"><i class="gg-instagram"></i></a>
+    <a href="https://twitter.com/webcifar" target="_blank"><i class="gg-twitter"></i></a>
+  </div>
+  <a href="https://pph.me/webcifar" target="_blank" class="hire link">Hire</a>
+  <a class="link" href="https://webcifar.com" target="_blank">webcifar.com</a>
+  <a class="link" href="mailto:info@webcifar.com" target="_blank">info@webcifar.com</a>
+
+</div>
   <!-- Contact Section -->
   <section id="contact">
     <div class="contact container">
