--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <img src="https://cdn.discordapp.com/attachments/728139160648679519/780041131001380916/giphy_2.gif" alt="img">
-<title>Sly_off</title>
+<title>Slywinter</title>
 </head>
 <body>
   <!-- Header -->
@@ -14,7 +14,7 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#hero"><h1><span>S</span>ly <span>_</span>off</h1></a>
+          <a href="#hero"><h1><span>S</span>ly <span>w</span>inter</h1></a>
         </div>
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
@@ -38,7 +38,7 @@
    <div>
       <h1>Hello, <span></span></h1>
        <h1>My Name is <span></span></h1>
-       <h1>sly_off<span></span></h1>
+       <h1>slywinter<span></span></h1>
        <a href="#projects" type="button" class="cta">Projet</a>
        <a href="https://discord.com/oauth2/authorize?client_id=764625811494928425&scope=bot&permissions=8" type="button" class="cta">Add the bot</a>      
       </div>
@@ -193,7 +193,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png"/></a>
         </div>
       </div>
-      <p>sly_off © 2020.</p>
+      <p>slywinter © 2020.</p>
     </div>
   </section>
   <!-- End Footer -->
